--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-		"start": "node src/index.js",
-		"start:loud": "node src/index.js loud"
+    "start": "node src/index.js",
+    "start:loud": "node src/index.js loud"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/vfalconi/contrast-reports#readme",
   "dependencies": {
     "color-contrast-calc": "^0.4.1",
-    "csv-writer": "^1.5.0"
+    "csv-writer": "^1.5.0",
+    "nunjucks": "^3.2.0"
   }
 }
